2011-06-15  Murray Cumming  <murrayc@murrayc.com>

	Avoid use of deprecated G_CONST_RETURN.

	* libepc-ui/password-dialog.[h|cc]:
	* libepc/consumer.[h|cc]:
	* libepc/contents.[h|cc]:
	* libepc/dispatcher.[h|cc]:
	* libepc/protocol.[h|cc]:
	* libepc/publisher.[h|cc]:
	* libepc/service-info.[h|cc]:
	* libepc/service-type.[h|cc]:
	* libepc/shell.[h|cc]: Use const instead.

	=== Release 0.4.0 ===

2010-05-12  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with --enable-compiler-warnings=error

	* libepc-ui/progress-window.c
	* examples/consumer-ui.c: Remove ifdefed code for older versions
	of GTK+. We use GTK+ 3 now anyway. This was causing a compiler
	warning about extra tokens after #ifdef.

2010-05-12  Christopher Dale  <chrelad@gmail.com>

	Use avahi-ui-gtk3 rather than avahi-ui-gtk.
	Bug #649404

	This breaks ABI, but this is an unstable library anyway (murrayc).

2010-03-24  David King  <davidk@openismus.com>

	Fix compilation with GSEAL_ENABLE defined

	* examples/consumer-ui.c:
	* libepc-ui/password-dialog.c:
	* libepc-ui/progress-window.c: Update for compilation with GSEAL_ENABLE
	defined.

	=== Release 0.3.10 ===

2010-03-23  David King  <davidk@openismus.com>

	Fix several compiler warnings

	* libepc/publisher.c:
	* examples/lookup-resource.c:
	* examples/consumer-ui.c: Use G_GSIZE_FORMAT for a gsize parameter in
	printf format strings.

	* libepc/tls.c: Use gsize* as third parameter to g_file_get_contents().

	* examples/publisher-ui.c: Add prototypes for GtkBuilder callbacks.

2010-03-23  David King  <davidk@openismus.com>

	Modernise autotools configuration

	* configure.ac: Require autoconf 2.63 and automake 1.10.3. Change bug
	report link to bugzilla product. Add no-define option to automake
	configuration. Do not use GNOME_COMMON_INIT. Reorder to the ‘standard
	configure.ac layout’ as per the autoconf manual. Check deprecation
	flags with GNOME_MAINTAINER_MODE_DEFINES, to avoid deprecations
	affecting tarball releases. Enable warnings with